# croqueNote

./: .gitignore  CMakeLists.txt  README.md  _masterBuild-macosx.sh  _masterBuild-win32.cmd  ch_line_endgins.sh  copy-exports-macosx.sh  copy-exports-win32.cmd  requirements.txt  update_projectKetchup.cmd
export/all/all/i18n/: fr_FR.po  template_en_US.pot
i18n/: createTemplateStringList.bat  croqueNoteFolderList.txt
installer/macosx/: BuildInstallerAndDMG.sh  CroqueNoteDMG.psd  bkg.tif
installer/macosx/Output_Files/Croque-Note.app/Contents/: Info.plist
installer/macosx/Output_Files/Croque-Note.app/Contents/MacOS/: Croque-Note
installer/macosx/Output_Files/Croque-Note.app/Contents/Resources/: Croque-Note.icns  fr_FR.mo
installer/win32/: LICENSE.rtf  install.nsi  strstr.nsh  update.nsi  utilities.nsh
scripts/: build-installer.bat  update-version.bat
src/: AddBarsVectorControl.cpp  AddBarsVectorControl.h  BarHeaderChangeCommand.cpp  BarHeaderChangeCommand.h  BarHeaderSpacer.cpp  BarHeaderSpacer.h  BarSectionNumberChangeCommand.cpp  BarSectionNumberChangeCommand.h  BarViewVectorControl.cpp  BarViewVectorControl.h  CMakeLists.txt  ChangeBarTypeCommand.cpp  ChangeBarTypeCommand.h  ChangeBarsPerRowCommand.cpp  ChangeBarsPerRowCommand.h  ChangeKeyCommand.cpp  ChangeKeyCommand.h  ChangeTuningCommand.cpp  ChangeTuningCommand.h  ChordableContentObject.cpp  ChordableContentObject.h  ChordableDocument.cpp  ChordableDocument.h  ChordableFactory.cpp  ChordableFactory.h  ChordablePreferences.cpp  ChordablePreferences.h  ChordableSelection.cpp  ChordableSelection.h  ChordableSettings.cpp  ChordableSettings.h  ChordableVectorControlRoot.cpp  ChordableVectorControlRoot.h  ChordableWindow.cpp  ChordableWindow.h  ChordableWindow_XML.h  ChordablesPreferences_XML.h  CroqueNoteVersion.h  ExportDialog.cpp  ExportDialog.h  (+32 more)
